--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,6 @@ name: Node.js CI
 on:
   push:
     branches: [ "backend" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -20,12 +18,14 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with: 
+        node-version: "16.x"
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run test
+      run: npm test
